# GEM

./: .gitignore  BASELINE_PROTOCOL.md  LICENSE  PRODUCTIONIZATION.md  README.md  RELATED_WORK.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
gem/: __init__.py  baseline_mem0.py  classify.py  cost_eval.py  cost_eval_sim.py  demo_agent.py  demo_personal.py  derive_precision.py  diag.py  embed.py  engine.py  eval.py  eval_diverse.py  falkor_store.py  gap_experiment.py  llm.py  memory.py  prompts.py  quickstart.py  retrieval.py  retrieval_ablation.py  scenarios.py  store.py  trace_mumbai.py
runs/: baseline_mem0.txt  baseline_mem0_native.txt  baseline_mem0_selective.txt  baseline_mem0_selective_st.txt  closedbook_mh6k.txt  cloud_focused.txt  conservative_demo.txt  cost_eval.txt  cost_eval_sim.txt  demo_agent.txt  derive_precision_groq.txt  determinism.txt  determinism_120b.txt  diag_derive_diverse.txt  diag_derive_recall.txt  diag_derive_recall_v2.txt  eval_diverse.txt  factconsolidation_mh6k.json  gap_experiment.txt  gate_gptoss120b_sh6k.json  mh6k_run.txt  probe_08b.json  propagation_eval.txt  propagation_eval_full.txt  propagation_eval_strat.txt  quickstart_demo.txt  scenarios_2b_voting.txt  scenarios_falkor.txt  scenarios_llama8b.txt  scenarios_qwen2b.txt  scenarios_qwen2b_v2.txt  scenarios_qwen2b_v3.txt  scenarios_result.txt  stale_depth_clean.txt  stale_depth_groq.txt  stale_depth_test.txt  stale_glazy.txt  stale_lazy_optimized.txt  stale_path1_allmethods.txt  stale_path1_result.txt  (+4 more)
stale_eval/: FINDINGS.md  adapter.py  anchor_scale.py  anchor_test.py  depth_test.py  methods.py  path1.json
tests/: conftest.py  test_classify.py  test_embed.py  test_engine.py  test_eval_generator.py  test_falkor.py  test_memory.py  test_pipeline.py  test_scorer.py  test_store.py
unit0/: __init__.py  closedbook.py  data.py  inspect_data.py  inspect_data2.py  pipeline.py  prompts.py  run.py  scorer.py  selftest.py
